[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
futures = "0.3.28"
futures-util = "0.3.28"
minifb = "0.24.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
tungstenite = "0.19.0"
url = "2.3.1"
